--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "webpack-cli": "^3.3.10",
     "webpack-node-externals": "^1.7.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "css-loader": "^3.4.0",
+    "isomorphic-style-loader": "^5.1.0",
+    "style-loader": "^1.0.2"
+  },
   "scripts": {
     "start": " concurrently \"yarn dev:client\" \"yarn dev:server\" \"yarn dev:start\"",
     "dev:client": "webpack --config webpack.client.js --watch",
