--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-loader": "^8.0.6",
     "concurrently": "^5.0.1",
     "express": "^4.17.1",
+    "html-webpack-plugin": "^3.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
